[package]
name = "libmount"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread","macros","time","signal"]}
tokio-util = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

